sunstonefarms/static/css/sunstone.style.css
.myslider{
	max-width:83%;
	margin: 0 auto;
	padding-bottom:30px;
}
.myslider img {
  height: 200px;
}
.highlights {
	background-color:#192024;
}
.wrapper{
	min-height: 100%;
	position: relative;
	padding-bottom:205px;
}

.footer-wrap{
	position:absolute;
	bottom:0;
	width:100%;
	left:0;
	max-height:205px;
}

html, body {
	overflow-y:hidden;
	height:100%;
}

.contact-section{
	height:100%;
	padding:60px;
}
.myfooter{
	background-color:#edeff2;
}
.contact-content {
	text-align:left;
	padding:40px;
}
a.no-underline{
	text-decoration:none;
}
.itemdescription{
	padding-left: 7%;
	text-align:left;
}
.section-subheading{
	max-width:95%;
}

